# python-project-52

./: .flake8  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: .env  Makefile  build.yml
labels/: tests.py  views.py
labels/migrations/: 0001_initial.py  0002_initial.py  0002_remove_label_created_at_label_tasks.py  0003_alter_label_tasks.py
labels/templates/labels/: label_confirm_delete.html  label_form.html  label_list.html
project_manager/: settings.py
project_manager/templates/: base.html  home.html
statuses/: models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
task_manager/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
task_manager/templates/: base.html  home.html
taskapp/: models.py  tests.py  urls.py  views.py
taskapp/migrations/: 0001_initial.py  0002_task.py
taskapp/templates/: base.html  home.html  status_form.html  task_detail.html  task_list.html  user_confirm_delete.html
tasks/: filters.py  forms.py  models.py  tests.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_initial.py  0002_remove_task_author_task_labels_and_more.py  0003_alter_task_assigned_to_alter_task_labels_and_more.py  0004_task_author.py  0005_task_created_at_task_updated_at.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py
users/templates/: login.html
(+51 files in other folders)
