[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nikita <voitko1994@gmail.com>"]
readme = "README.md"
packages = [
    { include = "task_manager" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^24.2"
rollbar = "^0.16.3"
django-filter = "^24.3"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"